# SalamHack-Sahim

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  firestore.rules  netlify.toml  render.yaml
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  cache.py  config.py  exceptions.py  main.py
backend/app/api/: allocator.py  sectors.py  stock.py  support.py  tools.py
backend/app/models/: stock.py  support.py  tools.py
backend/app/services/: allocator_service.py  arima_service.py  gold_service.py  halal_screener.py  market_data.py  news_agent.py  news_fetcher.py  risk_service.py  score_engine.py  sector_service.py  support_chat_service.py
backend/tests/unit/: test_halal_screener.py  test_news_agent.py  test_score_engine.py
context/: $ahim- project document COMBINED.md  TradeRisk Advisor - project document.md
docs/: mvp-storage.md
frontend/: .env.local.example  ENHANCEMENT_GUIDE.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: i18n.ts  (+1 more)
originalReference/: Final_Presentation.md  Mohammed's Description.txt  SalamHack.md  assumptions.md  presentation_script.docx  prototypeSubmissionGuidlines.md  ~$esentation_script.docx
(+161 files in other folders)
